...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reminder_title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reminder_description_text"
            android:textSize="@dimen/text_size_normal"
            android:text="Description:"/>

        <TextView
            android:id="@+id/reminder_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reminder_title_text"
...
